Closed Bug 1329179 Opened 7 years ago Closed 7 years ago

Play Tab indicator is displayed on a foreground tab

Categories

(Core :: Audio/Video: Playback, defect)

53 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla54
Tracking Status
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 --- affected
firefox53 --- affected
firefox54 --- verified

People

(Reporter: sbadau, Assigned: alwu)

References

Details

Attachments

(2 files)

Attached video PlayTab.mp4
Mozilla/5.0 (Windows NT 10.0; WOW64; rv:53.0) Gecko/20100101 Firefox/53.0
Build ID: 20170105030229

[Affected versions]:
- Nightly 53.0a1

[Affected platforms]:
- All 

[Steps to reproduce]:
1. Launch Nightly
2. Open a new tab -> click the URL Bar ->Paste & Go the following YouTube video:
https://www.youtube.com/watch?v=Tc5RlzWevQg&list=RDTc5RlzWevQg
3. Repeat step 2 a couple of times and observe the Indicator that is firstly displayed in the tab

[Expected result]:
- The sound indicator should be displayed since the tab is in focus

[Actual result]:
- The Play Tab indicator is shortly displayed in the right side of the tab. Please see the screen-cast for more details. 

[Regression range]:
- not a regression
Reproducible also on the latest Aurora 52.0a2 (Build ID: 20170112004017). Setting status-firefox52: to affected.
Hi Alastor,
Can you check if this is an audio indicator issue?
Flags: needinfo?(alwu)
Yes.
Assignee: nobody → alwu
Flags: needinfo?(alwu)
Attachment #8827358 - Flags: review?(amarchesini)
Comment on attachment 8827358 [details]
Bug 1329179 - only display 'play tab' icon for background tab.

https://reviewboard.mozilla.org/r/105060/#review108552
Attachment #8827358 - Flags: review?(amarchesini) → review+
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/76a2444f8eab
only display 'play tab' icon for background tab. r=baku
https://hg.mozilla.org/mozilla-central/rev/76a2444f8eab
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:54.0) Gecko/20100101 Firefox/54.0
Build ID: 20170206030211

Verified as fixed using the latest Nightly 54.0a1 on Windows 10 x64, Ubuntu 16.04 x64 and Mac OS X 10.11.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: